style: fix style for overflowing msg background

--- a/frontend/src/components/chat/App.css
+++ b/frontend/src/components/chat/App.css
@@ -28,7 +28,7 @@
 }
 
 .chat-bubble-dark.right {
-  background-color: #38b2ac;
+  background-color: #2a8580;
   color: white;
 }
 
